# test-task-keymakr

./: .gitignore  README.md  pyproject.toml
src/fetch_api/: data_fetching.py  data_saving.py  exceptions.py  main.py  schemas.py
src/fetch_api/database/: database.py  settings.py
src/fetch_api/database/models/: posts.py
