[tool.poetry]
name = "test-task-keymakr"
version = "0.1.0"
description = ""
authors = ["Max Savenya <savenya2013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.13"
pandas = "^2.2.3"
lxml = "^5.3.1"
jsonschema = "^4.23.0"
argparse = "^1.4.0"
aiosqlite = "^0.21.0"
logging = "^0.4.9.6"
xmltodict = "^0.14.2"
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
